# storage/api-docs/api-docs.json
@@ -150,6 +150,58 @@
                 ],
                 "summary": "Display a listing of the items",
                 "operationId": "index",
+                "parameters": [
+                    {
+                        "name": "_page",
+                        "in": "query",
+                        "description": "current page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "_limit",
+                        "in": "query",
+                        "description": "max item in a page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "_search",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_publisher",
+                        "in": "query",
+                        "description": "search by publisher like name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_sort_by",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "latest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successful",
@@ -178,7 +230,7 @@
                             "example": {
                                 "title": "Hinata",
                                 "series": "Haikyuu",
-                                "manufacturer": "Orange Rouge",
+                                "publisher": "Orange Rouge",
                                 "release_year": "2017",
                                 "category": "figma",
                                 "cover": "https://images.goodsmile.info/cgm/images/product/20170616/6503/45891/large/9e1b7effe4c668ac66d4afb4fcb11f13.jpg",
@@ -288,7 +340,7 @@
                             "example": {
                                 "title": "Hinata",
                                 "series": "Haikyuu",
-                                "manufacturer": "Orange Rouge",
+                                "publisher": "Orange Rouge",
                                 "release_year": "2017",
                                 "category": "figma",
                                 "cover": "https://images.goodsmile.info/cgm/images/product/20170616/6503/45891/large/9e1b7effe4c668ac66d4afb4fcb11f13.jpg",
